--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,22 +4,21 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+
 jobs:
   playwright:
-    name: 'Playwright Tests'
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright/python:v1.55.0-noble
-      options: --user 1001
+      image: mcr.microsoft.com/playwright/python:v1.56.0-noble
+
     steps:
-      - uses: actions/checkout@v5
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.13'
+      - uses: actions/checkout@v4
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run your tests
-        run: pytest
+        run: |
+          pytest --alluredir=reports/allure-results
